change captainhook command
